Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7356

Qt 4.6.1fails to build from scratch on altix architecture with intel compiler

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 4.6.2
    • 4.6.0
    • Core: Threads
    • None
    • d59eaf1c550d45ff1009ccceaea6298b9e3d8e2b

      I have the same problem as QTBUG-5955 using the Intel compiler instead of the g++ compiler using src from
      http://qt.gitorious.org/qt/qt/archive-tarball/4.6-stable

      /usr/local/qt-qt/bin/moc -DQT_BUILD_CORE_LIB -DQT_NO_USING_NAMESPACE -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT3_SUPPORT -DQT_MOC_COMPAT -DHB_EXPORT=Q_CORE_EXPORT -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I../../mkspecs/linux-icc -I. -I../../include -I../../include/QtCore -I.rcc/debug-static -Iglobal -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I.moc/debug-static kernel/qobject.h -o .moc/debug-static/moc_qobject.cpp
      icpc -c -wd654,1572 -I/usr/include/mysql -I/usr/local/include -g -D_REENTRANT -fPIC -DQT_BUILD_CORE_LIB -DQT_NO_USING_NAMESPACE -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT3_SUPPORT -DQT_MOC_COMPAT -DHB_EXPORT=Q_CORE_EXPORT -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I../../mkspecs/linux-icc -I. -I../../include -I../../include/QtCore -I.rcc/debug-static -Iglobal -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I.moc/debug-static -o .obj/debug-static/qobject.o kernel/qobject.cpp
      kernel/qobject.cpp(3294): warning #187: use of "=" where "==" may have been intended
      } while (signal_index >= 0 && (signal_index = -1)); //start over for -1 (all signal)
      ^

      ../../include/QtCore/../../src/corelib/arch/qatomic_ia64.h(208): error: argument of type "QMutexPool *volatile *" is incompatible with parameter of type "void *volatile *"
      return (T *)_InterlockedExchangePointer(&_q_value, newValue);
      ^
      detected during instantiation of "T *QBasicAtomicPointer<T>::fetchAndStoreAcquire(T *) [with T=QMutexPool]"

      compilation aborted for kernel/qobject.cpp (code 2)
      gmake[1]: *** [.obj/debug-static/qobject.o] Error 2
      gmake[1]: Leaving directory `/usr/local/qt-qt/src/corelib'
      gmake: *** [sub-corelib-make_default-ordered] Error 2
      local/qt-qt>

        1. compile_fail.txt
          355 kB
          Richard Fleck
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tmacieir Thiago Macieira (closed Nokia identity) (Inactive)
            rich Richard Fleck
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes