Fix compilation on IA-64 with the Intel compiler: cast properly.

Error was:
../../include/QtCore/../../src/corelib/arch/qatomic_ia64.h(208):
error: argument of type "QMutexPool *volatile *" is incompatible with parameter of type "void *volatile *"
 return (T *)_InterlockedExchangePointer(&_q_value, newValue);
                                              ^
 detected during instantiation of "T *QBasicAtomicPointer<T>::fetchAndStoreAcquire(T *) [with T=QMutexPool]"

Patch by Intel Yolanda Chen (relayed by reporter Richard Fleck).
Task-number: QTBUG-7356